--- a/about_academix.html
+++ b/about_academix.html
@@ -56,24 +56,10 @@
               <li><a href="about_academix.html" class="active">About Academix</a></li>
               <li><a href="gallery.html">Gallery</a></li>
 
-              <!-- <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li> -->
             </ul>
           </li>
           <li><a href="program.html">Program</a></li>
-          <!-- <li><a href="portfolio.html">Enrollment & Fees</a></li> -->
-          <!-- <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="blog.html">Blog</a></li> -->
-
-          <!-- <li><a href="contact.html">Contact</a></li> -->
-          <li><a href="index.html" class="getstarted">Enrollment & Fees</a></li>
+          <li><a href="enrollment_and_fees.html" class="getstarted">Enrollment & Fees</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
