--- a/gallery.html
+++ b/gallery.html
@@ -55,16 +55,10 @@
             <ul>
               <li><a href="about_academix.html">About Academix</a></li>
               <li><a href="gallery.html" class="active">Gallery</a></li>
-
             </ul>
           </li>
           <li><a href="program.html">Program</a></li>
-          <!-- <li><a href="portfolio.html">Enrollment & Fees</a></li> -->
-          <!-- <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="blog.html">Blog</a></li> -->
-
-          <!-- <li><a href="contact.html">Contact</a></li> -->
-          <li><a href="index.html" class="getstarted">Enrollment & Fees</a></li>
+          <li><a href="enrollment_and_fees.html" class="getstarted">Enrollment & Fees</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
