--- a/program.html
+++ b/program.html
@@ -75,7 +75,7 @@
             </ul>
           </li>
           <li><a href="program.html" class="active">Program</a></li>
-          <li><a href="index.html" class="getstarted">Enrollment & Fees</a></li>
+          <li><a href="enrollment_and_fees.html" class="getstarted">Enrollment & Fees</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
