--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Academix</span></h2>
               <p class="animate__animated animate__fadeInUp"> Empowering young minds & igniting curiosity | Dream, Explore & Imagine</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More | About Academix</a>
+              <a href="about_academix.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More | About Academix</a>
             </div>
           </div>
         </div>
@@ -91,7 +91,7 @@
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Lead by highly experienced and devoted team</h2>
               <p class="animate__animated animate__fadeInUp">We provide exceptional care for children in a healthy, professional and fun environment</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">See More | Gallery</a>
+              <a href="gallery.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">See More | Gallery</a>
             </div>
           </div>
         </div>
@@ -102,7 +102,7 @@
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">All rounded curriculum & facilitiy</h2>
               <p class="animate__animated animate__fadeInUp">Designed to provide all arounded curriculum for mental, physical & emotional development</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More | Program</a>
+              <a href="program.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More | Program</a>
             </div>
           </div>
         </div>
@@ -148,31 +148,13 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="about_academix.html">About Academix</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="gallery.html">Gallery</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="program.html">Program & Hours</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="enrollment_and_fees.html">Apply now</a></li>
             </ul>
           </div>
-
-          <!-- <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
-          </div> -->
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
 
           </div>
 
