--- a/about_academix.html
+++ b/about_academix.html
@@ -76,7 +76,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>About</h2>
           <ol>
-            <li><a href="index.html">About</a></li>
+            <li><a href="index.html">Home</a></li>
             <li>About Academix</li>
           </ol>
         </div>
