--- a/program.html
+++ b/program.html
@@ -319,7 +319,7 @@
               587 Coyote Road <br>
               San Jose, CA, USA<br><br>
               <strong>Phone:</strong> +1 415 539 9001 <br>
-              <strong>Email:</strong> academix [@] gmail.com<br>
+              <strong>Email:</strong> academix.customer@gmail.com<br>
             </p>
             <div class="social-links mt-3">
               <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
