--- a/about_academix.html
+++ b/about_academix.html
@@ -36,7 +36,17 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
-
+<style>
+  .myImage {
+  float: left;
+  height: 75px;
+  width: 235px;
+  font-family: Veranda;
+}
+.heading {
+  float:right;
+}
+</style>
 <body>
 
   <!-- ======= Header ======= -->
@@ -123,12 +133,22 @@
           <div class="col-lg-12">
             <div class="member d-flex align-items-start">
               <div class="pic"><img src="assets/img/team/mika.png" class="img-fluid" alt=""></div>
+              <!-- <img src="website_art.png" class="myImage"/> -->
+
               <div class="member-info">
                 <h4>Michaela (Mika) Vallejo Reyes, RN, BSN</h4>
                 <span>President & Owner</span>
                 <span>Mika is a registered nurse in the state of California, mother of a 2 year old daughter, and running Academix with love of providing care for <br> 
                   children in the silicon valley. She has experience in healthcare, elderly care and childcare. Mika has paid special attention to details in building  <br> 
                   Academix from facility, curriculum and with her devotion, she hopes to provide the best for your family.
+
+                  <!-- My name is Michaela Reyes. I grew up in the Philippines, attending a Christian school and going to church with my family every Sunday, which reinforced our strong sense of faith and community. Living in an extended family household with my grandparents, I developed close bonds with my aunts, uncles, siblings, and cousins. My childhood was enriched by joyful moments spent with family, and I deeply valued the close-knit relationships we had.
+
+This close-knit family environment inspires my commitment to creating a daycare that fosters genuine connections and builds strong bonds. I envision a place that goes beyond being just another daycare—a nurturing environment where trusting relationships are at the core, offering the same sense of belonging and support that I experienced growing up.
+
+The inspiration to open my own daycare came from recognizing what was lacking in my community and the difference I wanted to make. As a mother, I struggled to find a daycare that met my standards for quality care and nurturing, realizing that something essential was missing.
+
+With a background in science and nursing, I am equipped with the skills and passion to create the environment I envisioned. My personal and professional experiences have driven me to pursue this path. I am dedicated to making a positive difference in the lives of young children by providing them with compassion, safety, and a supportive learning environment. My goal is to foster an atmosphere of growth, creativity, and emotional well-being, laying a strong foundation for each child’s future. For me, this is not just a career; it is a calling to make a meaningful impact on young hearts and minds. -->
                 </span>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
