--- a/gallery.html
+++ b/gallery.html
@@ -112,6 +112,49 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-playroom">
+            <div class="portfolio-wrap">
+              <img src="assets/img/gallery/playroom1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Playroom</h4>
+                <p>Ready for some fun time!</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/gallery/playroom1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Playroom"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-playroom">
+            <div class="portfolio-wrap">
+              <img src="assets/img/gallery/playroom2.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Playroom</h4>
+                <p>Ready for some fun time!</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/gallery/playroom2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Playroom"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-playroom">
+            <div class="portfolio-wrap">
+              <img src="assets/img/gallery/playroom3.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Playroom</h4>
+                <p>Ready for some fun time!</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/gallery/playroom3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Playroom"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-outdoor">
             <div class="portfolio-wrap">
@@ -126,6 +169,78 @@
               </div>
             </div>
           </div>
+
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-outdoor">
+            <div class="portfolio-wrap">
+              <img src="assets/img/gallery/outdoor1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Outdoor</h4>
+                <p>Ready for some fun time outside!</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/gallery/outdoor1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Outdoor"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-outdoor">
+            <div class="portfolio-wrap">
+              <img src="assets/img/gallery/outdoor2.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Outdoor</h4>
+                <p>Ready for some fun time outside!</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/gallery/outdoor2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Outdoor"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-outdoor">
+            <div class="portfolio-wrap">
+              <img src="assets/img/gallery/outdoor3.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Outdoor</h4>
+                <p>Ready for some fun time outside!</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/gallery/outdoor3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Outdoor"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-outdoor">
+            <div class="portfolio-wrap">
+              <img src="assets/img/gallery/outdoor4.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Outdoor</h4>
+                <p>Ready for some fun time outside!</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/gallery/outdoor4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Outdoor"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-outdoor">
+            <div class="portfolio-wrap">
+              <img src="assets/img/gallery/outdoor5.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Outdoor</h4>
+                <p>Ready for some fun time outside!</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/gallery/outdoor5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Outdoor"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
 
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-bedroom">
