--- a/program.html
+++ b/program.html
@@ -155,43 +155,47 @@
                 </tr>
                 <tr>
                   <td>8 AM</td>
-                  <td>Drop Off</td>
+                  <td>Welcome</td>
                 </tr>
                 <tr>
-                  <td>8:00  -  9:00  AM</td>
-                  <td>Outdoor morning playtime</td>
-                </tr>
-                <tr>
-                  <td>9:30  -  10:00 AM</td>
+                  <td>8:30  -  9:30  AM</td>
                   <td>Breakfast</td>
                 </tr>
                 <tr>
-                  <td>10:00  -  11:30 AM</td>
-                  <td>Indoor learning time</td>
+                  <td>9:30  -  10:30 AM</td>
+                  <td>Morning Circle Time/Reading</td>
+                </tr>
+                <tr>
+                  <td>10:30  -  11:30 AM</td>
+                  <td>Outdoor play/Nature time</td>
+                </tr>
+                <tr>
+                  <td>11:30  -  12:00 AM</td>
+                  <td>Wash Hand/ Music/ Free time</td>
                 </tr>
                 <tr>
                   <td>Noon  -  1:00  PM</td>
                   <td>Lunch</td>
                 </tr>
                 <tr>
-                  <td>1:00  -  2:30 PM</td>
-                  <td>Afternoon nap</td>
-                </tr>
-                <tr>
-                  <td>2:30  -  3:30 AM</td>
+                  <td>1:00  -  2:00 PM</td>
                   <td>Creativity & toy time</td>
                 </tr>
                 <tr>
-                  <td>3:30  -  4:00 AM</td>
+                  <td>2:00  -  4:00 PM</td>
+                  <td>Afternoon Nap/ Quiet time </td>
+                </tr>
+                <tr>
+                  <td>4:0  -  4:30 PM</td>
                   <td>Afternoon snack</td>
                 </tr>
                 <tr>
-                  <td>4:00  -  5:30 AM</td>
-                  <td>Play with your mate</td>
+                  <td>4:30  -  5:00 PM</td>
+                  <td>Group Activity or Free Play</td>
                 </tr>
                 <tr>
-                  <td>5:30 AM</td>
-                  <td>Pickup time</td>
+                  <td>5:00  -  5:30 PM</td>
+                  <td>Wind down/Departure</td>
                 </tr>
               </table>
             </div>
