--- a/enrollment_and_fees.html
+++ b/enrollment_and_fees.html
@@ -127,8 +127,8 @@
             <i class="bi bi-calendar4-week"></i>
             <!-- <br> -->
             <h4><a href="#">Tuition & Fees</a></h4>
-            <p> We provide breakfast, lunch and snacks. Playing toys and equipments are also included. Parents are welcome to bring additional items.</p>
-            <table>
+            <p> We provide breakfast, lunch and snacks. Playing toys and equipments are also included. Parents are welcome to bring additional items. Please contact at academix.customer@gmail.com or 415-539-9001</p>
+            <!-- <table>
               <tr>
                 <th>Category</th>
                 <th>Monthly</th>
@@ -137,7 +137,7 @@
               <tr>
                 <td>Infants</td>
                 <td>$ 2700</td>
-                <td>$ 145</td>
+                <td>$ 150</td>
               </tr>
               <tr>
                 <td>Toddlers</td>
@@ -154,7 +154,7 @@
                 <td>$ 2400</td>
                 <td>$ 130</td>
               </tr>
-            </table>
+            </table> -->
           </div>
         </div>
        
